# vega

./: .env.example  .gitignore  .mcp.json  README.md  STRATEGY.md  pyproject.toml
.claude/: launch.json
data/calendar/: macro-v1.csv
data/universe/: universe-v1.csv  universe-v2.csv
documentation/: architecture.md  context-coverage.md  glossary.md  tech-stack.md
scripts/: refresh_universe.py  secret-scan.sh  verify.sh
src/vega/: __init__.py
src/vega/backtest/: __init__.py  __main__.py  costs.py  engine.py  folds.py  live_metrics.py  market_view.py  metrics.py  registry.py  signals.py  simulate.py
src/vega/briefing/: __init__.py  __main__.py  calls.py  engine.py  render.py
src/vega/common/: __init__.py  appendlog.py  atr.py  db.py  doctrine.py  paths.py  runlock.py
src/vega/data/: __init__.py  ingest.py  snapshot.py  types.py  universe.py  validate.py
src/vega/execution/: __init__.py  executor.py  exits.py  pnl.py
src/vega/ledger/: __init__.py  store.py  types.py
src/vega/lifecycle/: __init__.py  __main__.py  demotion.py  lifecycle.py  live_trades.py  rationale.py
src/vega/regime/: __init__.py  __main__.py  calendar.py  inputs.py  regime.py
tests/: conftest.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_folds.py  test_backtest_market_view.py  test_backtest_metrics.py  test_backtest_registry.py  test_backtest_signals.py  test_backtest_simulate.py  test_briefing.py  test_briefing_calls.py  test_common_appendlog.py  test_common_atr.py  test_common_db.py  test_common_runlock.py  test_execution.py  test_execution_exits.py  test_ledger.py  test_lifecycle.py  test_lifecycle_demotion.py  test_lifecycle_live_trades.py  test_lifecycle_rationale.py  test_regime.py  test_risk_clusters.py  test_risk_engine.py  test_risk_gates.py  test_risk_heat.py  test_risk_sizing.py  test_run_entry.py  test_signals_breakout_volume.py  test_signals_oversold_reversion.py  test_signals_trend_pullback.py  test_smoke.py  test_snapshot.py  test_sources_normalize.py  test_universe.py  test_validate.py  test_web_dashboard.py  test_web_markdown.py  test_web_runner.py  (+2 more)
(+28 files in other folders)
