[project]
name = "vega"
version = "0.1.0"
description = "Evidence-based swing-trading analyst — deterministic quant core, verified track record"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.5",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
    "pandas-stubs>=3.0.3.260530",
    "types-requests>=2.33.0.20260518",
    "lxml>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vega"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# S = flake8-bandit security rules (layer-1 security lint, mirrors the factory convention)
select = ["E", "F", "W", "I", "B", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["yfinance.*", "duckdb.*", "dotenv.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
